"""Init

Revision ID: 4062ea071d09
Revises: 
Create Date: 2026-01-19 16:47:23.900945

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '4062ea071d09'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('admins',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('password_hash', sa.String(), nullable=False),
    sa.Column('last_login_date', sa.DateTime(), nullable=False),
    sa.Column('date_created', sa.DateTime(), nullable=False),
    sa.Column('date_updated', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_index(op.f('ix_admins_id'), 'admins', ['id'], unique=False)
    op.create_table('users',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('password_hash', sa.String(), nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('last_login_date', sa.DateTime(), nullable=True),
    sa.Column('email_verified', sa.Boolean(), server_default=sa.text('false'), nullable=False),
    sa.Column('date_created', sa.DateTime(), nullable=False),
    sa.Column('date_updated', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_index(op.f('ix_users_id'), 'users', ['id'], unique=False)
    op.create_table('events_log',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=True),
    sa.Column('admin_id', sa.UUID(), nullable=True),
    sa.Column('entity', sa.String(), nullable=False),
    sa.Column('entity_id', sa.UUID(), nullable=False),
    sa.Column('event', sa.String(), nullable=False),
    sa.Column('payload', postgresql.JSON(astext_type=sa.Text()), nullable=False),
    sa.Column('date_created', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['admin_id'], ['admins.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_events_log_admin_id'), 'events_log', ['admin_id'], unique=False)
    op.create_index(op.f('ix_events_log_id'), 'events_log', ['id'], unique=False)
    op.create_index(op.f('ix_events_log_user_id'), 'events_log', ['user_id'], unique=False)
    op.create_table('login_reset_requests',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('token', sa.String(), nullable=False),
    sa.Column('old_login', sa.String(), nullable=False),
    sa.Column('new_login', sa.String(), nullable=False),
    sa.Column('status', sa.String(), nullable=False),
    sa.Column('requested_at', sa.DateTime(), nullable=False),
    sa.Column('processed_at', sa.DateTime(), nullable=True),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_login_reset_requests_id'), 'login_reset_requests', ['id'], unique=False)
    op.create_index(op.f('ix_login_reset_requests_token'), 'login_reset_requests', ['token'], unique=False)
    op.create_index(op.f('ix_login_reset_requests_user_id'), 'login_reset_requests', ['user_id'], unique=False)
    op.create_table('password_reset_requests',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('token', sa.String(), nullable=False),
    sa.Column('status', sa.String(), nullable=False),
    sa.Column('requested_at', sa.DateTime(), nullable=False),
    sa.Column('processed_at', sa.DateTime(), nullable=True),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_password_reset_requests_id'), 'password_reset_requests', ['id'], unique=False)
    op.create_index(op.f('ix_password_reset_requests_token'), 'password_reset_requests', ['token'], unique=False)
    op.create_index(op.f('ix_password_reset_requests_user_id'), 'password_reset_requests', ['user_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_password_reset_requests_user_id'), table_name='password_reset_requests')
    op.drop_index(op.f('ix_password_reset_requests_token'), table_name='password_reset_requests')
    op.drop_index(op.f('ix_password_reset_requests_id'), table_name='password_reset_requests')
    op.drop_table('password_reset_requests')
    op.drop_index(op.f('ix_login_reset_requests_user_id'), table_name='login_reset_requests')
    op.drop_index(op.f('ix_login_reset_requests_token'), table_name='login_reset_requests')
    op.drop_index(op.f('ix_login_reset_requests_id'), table_name='login_reset_requests')
    op.drop_table('login_reset_requests')
    op.drop_index(op.f('ix_events_log_user_id'), table_name='events_log')
    op.drop_index(op.f('ix_events_log_id'), table_name='events_log')
    op.drop_index(op.f('ix_events_log_admin_id'), table_name='events_log')
    op.drop_table('events_log')
    op.drop_index(op.f('ix_users_id'), table_name='users')
    op.drop_table('users')
    op.drop_index(op.f('ix_admins_id'), table_name='admins')
    op.drop_table('admins')
    # ### end Alembic commands ###
