Project database {
    database_type: 'PostgreSQL'
}

Enum token_status {
    pending
    used
    canceled
    expired
}

Table users {
    id uuid [pk]
    email varchar [not null, unique]
    password_hash varchar [not null]
    name varchar [not null]
    last_login_date datetime [null]
    email_verified boolean [default: false]

    date_created datetime [not null]
    date_updated datetime [null]
}

Table password_reset_requests {
    id uuid [pk]
    user_id uuid  [ref: > users.id]
    token varchar [not null]
    status token_status [not null]
    requested_at datetime [not null]
    processed_at datetime [null]
    expires_at datetime [not null]
}

Table login_reset_requests {
    id uuid [pk]
    user_id uuid  [ref: > users.id]
    token varchar [not null]
    old_login varchar [not null]
    new_login varchar [not null]
    status token_status [not null]
    requested_at datetime [not null]
    processed_at datetime [null]
    expires_at datetime [not null]
}
